# py_debugging_with_tox

./: .gitignore  pytest.ini  setup.cfg
src/my_package/: my_module.py
test/: test_reverse.py
