[metadata]
name = tox_debug
version = 0.0.1
description = Attempt to debug with tox-managed project
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://git.rxcorp.com/cds/daqe-azure/d2atlaspublisher
author = Alex Khvatov (alex.khvatov@iqvia.com)
license = Proprietary

[options]
python_requires >=3.11
package_dir =
    =src
packages = find:
include_package_data = True
# install_requires=
#     requests==2.30.0

[flake8]
max-line-length = 120

[options.packages.find]
where = src
exclude =
    test*
    tests*

[tox:tox]
indexserver =
    default = https://nexus.rxcorp.com:8081/nexus/repository/pypi-all/
    trusted-host = nexus.rxcorp.com
envlist = py311
isolated_build = True

[testenv]
deps =
    pytest>=8.3.2
commands =
    pytest

[testenv:typecheck]
deps =
    mypy==1.11
    types-requests==2.32.0.20240712
    pytest>=8.3.2
commands =
    mypy src tests

[testenv:format]
deps =
    black==24.4.2
commands =
    black {posargs: .}

[testenv:flake8]
skip_install = true
deps = 
    flake8
    flake8-bugbear

commands=
    flake8 src tests

[testenv:isort]
deps = isort
commands=
    isort src tests
extend_skip = [".md", ".json"]

[testenv:ruff]
deps =
    ruff==0.5.5
commands = ruff check src tests
